# msc_app

./: Cargo.toml
api/: dados_sensor1.rs  pacientes.rs
src/: dados_sensor1.rs  db.rs  main.rs
static/: chart.js  content.html  content_home.html  content_list.html  content_login.html  dashboard.html  footer.html  header.html  index.html  inicio.html  lista.html  log.html  login.css  login.html  script.js  styles.css
static/css/: styles.css
static/js/: chart.js  script.js
