[package]
name = "sms_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.25" # A versão pode variar, verifique a versão mais recente no crates.io

