[package]
name = "sms_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.29.0" # A versão pode variar, verifique a versão mais recente no crates.io
rocket_okapi = "0.5.0"
devise_core = "0.4.1"  # Use a versão mais recente compatível